--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           ><img
             width="145"
             height="185"
-            src="/images/My_Virtual_Doctor_Logos-withtrademark.png"
+            src="images/My_Virtual_Doctor_Logos-withtrademark.png"
             alt="My Virtual Doctor Logo"
         /></a>
       </div>
@@ -140,7 +140,7 @@
               <img 
               width="350"
               height="200"
-                src="/images/quick-assessment.jpg"
+                src="images/quick-assessment.jpg"
                 alt="Complete a quick assessment"
               />
             </div>
@@ -158,7 +158,7 @@
               <img
               width="350"
               height="200"
-                src="/images/connect-doctor.jpg"
+                src="images/connect-doctor.jpg"
                 alt="Connect with a Doctor"
               />
             </div>
@@ -176,7 +176,7 @@
             <div class="image">
               <img 
               width="350"
-              height="200"src="/images/fingertips.jpg" alt="Care at your fingertips" />
+              height="200"src="images/fingertips.jpg" alt="Care at your fingertips" />
             </div>
             <div class="flex-content-2">
               <h2>Care at your fingertips</h2>
@@ -205,7 +205,7 @@
             <img
             width="145"
             height="185"
-              src="/images/My_Virtual_Doctor_Logos-withtrademark.png"
+              src="images/My_Virtual_Doctor_Logos-withtrademark.png"
               alt="My Virtual Doctor Logo"
             />
           </div>
